# uvrun

./: .commitlintrc.json  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/uvrun/: cli.py  config.py  discover.py  execute.py  repo.py
src/uvrun_simonb97/: __init__.py  cli.py
