[project]
name = "uvrun"
version = "0.1.0"
description = "Run Python scripts with inline metadata directly from URLs"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "click>=8.1.7",
    "tomli-w>=1.0.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
]
requires-python = ">=3.11"

[project.scripts]
uvrun = "uvrun.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uvrun"]