[project]
name = "uvrun_simonb97"
version = "0.0.1"
authors = [{name = "Simon Benedict", email = "hi@sbenedict.dev"}]
description = "Run Python scripts with inline metadata directly from URLs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "tomli-w>=1.0.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
]

[project.scripts]
uvrun = "uvrun_simonb97.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uvrun_simonb97"]